# multi_project

OpencvFilterTest/app/src/main/: AndroidManifest.xml
OpencvFilterTest/app/src/main/cpp/: log.h  module.cpp  native-lib.cpp
OpencvFilterTest/app/src/main/java/com/example/yoon/myapplication/: MainActivity.java
OpencvFilterTest/app/src/main/res/layout/: activity_main.xml
service_chat/MyApplication2/app/: build.gradle
service_chat/MyApplication2/app/src/androidTest/java/com/example/yoon/service_chat/: ExampleInstrumentedTest.java
service_chat/MyApplication2/app/src/main/: AndroidManifest.xml
service_chat/MyApplication2/app/src/main/cpp/: native-lib.cpp
service_chat/MyApplication2/app/src/main/java/com/example/yoon/service_chat/: MainActivity.java  MainService.java  MyService.java
service_chat/MyApplication2/app/src/main/res/layout/: activity_main.xml
service_chat/MyApplication2/app/src/main/res/values/: strings.xml
service_chat/MyApplication2/app/src/test/java/com/example/yoon/service_chat/: ExampleUnitTest.java
service_chat/MyApplication2/gradle/wrapper/: gradle-wrapper.properties
service_chat/OpencvFilterTest/app/: CMakeLists.txt  build.gradle
service_chat/OpencvFilterTest/app/src/main/cpp/: module.h
service_chat/OpencvFilterTest/app/src/main/java/com/example/yoon/myapplication/: CameraActivity.java
service_chat/OpencvFilterTest/app/src/main/res/layout/: activity_camera.xml
service_chat/OpencvFilterTest/app/src/main/res/values/: bottom.xml  styles.xml
service_chat/OpencvFilterTest/gradle/wrapper/: gradle-wrapper.properties
